# offseason-shelter-for-science-rescue_db

./: .env.dist  .gitignore  .pypirc.template  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_dev.sh
.github/workflows/: build-package.yml
alembic/: env.py
alembic/versions/: 0d791ade9e9c_add_rescues_table.py  12a15d98af95_assetkind_added_name.py  15737b2e8cf0_assetkind_dates.py  222627c18471_change_assets_and_resources_.py  2f9f22e8382c_init.py  37a3ded45c86_added_dataset_ranking_tables.py  3d2165e46382_change_id_to_bigint.py  4554acc5b22d_asset_size_to_big_int.py  4670cd8f1d65_fix_foreign_keys_nullabilty.py  50454163449e_add_rescuer_and_rescues_tables.py  573765da9fb2_added_raw_dataset_json_table.py  8e7749efc63b_set_rescue_table_as_class.py  8e808b40192d_add_harvestsource_tables.py  bdceafc77878_relations_default_values.py  dd4bfdee96c5_add_index_to_asset_resource.py  f04df438e6a2_add_first_table_for_data_gov_schema.py  f2cef33e6118_added_unicity_constraints_dataset_id_.py
data_pipelines/scripts/: 01_extract.py
manual_data_update/20250730_deduplicate_assets/: 01_create_asset_resource_backup.sql  02_deduplicate_assets.sql  03_replace_assets_data.sql  README.md
manual_data_update/20250804_fill_assert_resource_table/: README.md  fill_asset_resource_table.sql
manual_data_update/20250808_populate_downloader_library_table_mvp/: downloader_library_table_mvp.sql
manual_data_update/20250902_add_assets_for_mvp/: 01_create_backup_tables.sql  02_add_asset_kinds_for_mvp.sql  03_update_mvp_asset_kinds.sql  (+5 more)
rescue_api/: database.py  main.py  settings.py
(+66 files in other folders)
