[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rescue-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.115.13",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
]

[tool.setuptools.packages.find]
include = ["rescue_api*"]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
