[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rescue-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.115.13",
    "fastparquet>=2024.11.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.9",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["rescue_api*"]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
